# dynamic-wallpaper

./: .gitignore  README.md  TRANSLATORS.md  me.dusansimic.DynamicWallpaper.json  meson.build
.github/workflows/: ci.yaml
data/: dynamic_wallpaper.gresource.xml  me.dusansimic.DynamicWallpaper.appdata.xml.in  me.dusansimic.DynamicWallpaper.desktop.in  me.dusansimic.DynamicWallpaper.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: gdw-file-row.blp  help-overlay.blp  meson.build  window.blp
po/: LINGUAS  POTFILES  cs.po  dynamic-wallpaper.pot  el.po  es.po  fa.po  fr.po  hu.po  id.po  it.po  me.dusansimic.DynamicWallpaper.pot  meson.build  nl.po  oc.po  pt_BR.po  ru.po  sr-new.pot  sr.po  tr.po  tr_TR.po  vi_VN.po  zh_CN.po
src/: about_dialog.py.in  dynamic-wallpaper.in  dynamic_wallpaper.gresource.xml  gdw-file-row.ui  gdwFileRow.py  main.py  me.dusansimic.DynamicWallpaper.in  meson.build  preferences.py  preferences.ui  wallpaper_picker.css  wallpaper_picker.py  wallpaper_picker.ui  window.py  window.ui
